Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2012-07-26 12:48:53 America/New_York
  - fix some deps
  - basic rpm support

0.04      2012-07-25 16:20:49 America/New_York
  - add @Git back in
  - add VERSION to each module's POD
  - added ACPS minting profile.

0.03      2012-07-25 13:04:59 America/New_York
  - self hosting
  - remove git from bundle
  - automatically create remote public
  - fail to release if there is already a tag for this version

0.02      2012-07-25 11:57:01 America/New_York
  - added TODO

0.01      2012-07-25 11:47:41 America/New_York
  - initial version