@@ -11,5 +11,5 @@ version = 0.05
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::ACPS = profiles
 
-[RPM]
+[ACPS::RPM]
 ignore_build_deps = 1
