@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - added ACPS::RPM and dzil rpmspec command
 
 0.05      2012-07-26 12:48:53 America/New_York
   - fix some deps
